Modificacion del texto de la etiqueta h1

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Prueba de Git</title>
   </head>
   <body>
-    <h1>Hola Mundo</h1>
+    <h1>Hola Mundo de la programacion</h1>
   </body>
 </html>
