Volviendo a una version anterior

--- a/index.html
+++ b/index.html
@@ -5,7 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prueba de Git</title>
   </head>
-  <body>
-    <h1>Hola Mundo de la programacion</h1>
-  </body>
+  <body></body>
 </html>
